--- a/src/resources/css/index.css
+++ b/src/resources/css/index.css
@@ -43,3 +43,9 @@ hr,
 .photo-info {
   margin-left: 30px;
 }
+
+.photo-info-list {
+  list-style-type: none;
+  margin-left: 0;
+  padding-left: 0;
+}
